hw05 - rewrote javadocs in English, fixed checkstyle remarks